# ccompiler

./: .gitignore  .gitmodules  1.c  1.i  2.i  3.c  CMakeLists.txt  LICENSE  README.md  assert.sh
base/: CMakeLists.txt  error.cpp
codegen/: CMakeLists.txt  astvisitor.cpp  astvisitor.h  codegen.cpp  codegen.h
doc/: clang-clion debug.txt  outgrammer.txt  typeSpecifier-state-translation.md
docs/: sytax.md
drive/: CMakeLists.txt  main.cpp
lexer/: CMakeLists.txt  preprocessor.cpp  preprocessor.h  scanner.cpp  scanner.h  source.cpp  source.h  token.cpp  token.h
parser/: CMakeLists.txt  ast.h  parse.cpp  parse.h  scope.cpp  scope.h
parser/ast/: ast.h  astdump.cpp  astdump.h  decl.cpp  decl.h  expr.cpp  expr.h  stmt.cpp  stmt.h  type.cpp  type.h
sema/: CMakeLists.txt  analyzer .cpp  analyzer .h  analyzer.cpp  analyzer.h  sema.cpp  sema.h  symbol.cpp  symbol.h
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  README.md  backendpasses.cpp  backendpasses.h
src/backend/codegen/: astvisitor.cpp  astvisitor.h  codegen.cpp  codegen.h
src/backend/instSelect/: instselectpass.cpp  instselectpass.h  selectionDAG.cpp  selectionDAG.h
src/backend/mir/: machineblock.cpp  machineblock.h  machinefunction.cpp  machinefunction.h  machineinst.cpp  machineinst.h  machinemodule.h
src/backend/regAlloca/: linearscan.cpp  linearscan.h  riscvasmemitter.cpp  riscvasmemitter.h
src/backend/selector/core/selectionDAG/: selectionDAG.h
src/frontend/: CMakeLists.txt
src/frontend/ast/: ast.cpp  ast.h  decl.cpp  decl.h  expr.cpp  expr.h  stmt.cpp  stmt.h  type.cpp  type.h
src/frontend/lexer/: scanner.cpp  scanner.h  source.cpp  source.h  token.cpp  token.h
src/frontend/parser/: README.md  parse.cpp  parse.h
src/frontend/semantic/: analyzer.cpp  analyzer.h  sema.h  symbol.cpp  symbol.h
src/middleend/: CMakeLists.txt  cfg.cpp  cfg.h  cfgbuilder.cpp  cfgbuilder.h
src/middleend/ir/: block.cpp  block.h  constant.h  function.cpp  function.h  globalVar.h  globalvalue.cpp  globalvalue.h  instruction.cpp  instruction.h  irbuilder.cpp  irbuilder.h  irvisitor.h  module.cpp  module.h  usedef.cpp  usedef.h  value.h
src/middleend/ir/builder/: irbuilder.cpp  irbuilder.h  irvisitor.h
src/middleend/ir/inst/: baseinst.cpp  baseinst.h  binaryinst.cpp  binaryinst.h  meminst.cpp  meminst.h  otherinst.cpp  otherinst.h  terminator.cpp  terminator.h
src/middleend/ir/values/: argument.cpp  argument.h  constant.cpp  constant.h  globalvariable.cpp  globalvariable.h
src/middleend/optimizer/: README.MD  dominatetree.cpp  dominatetree.h  mem2reg.cpp  mem2reg.h  pass.cpp  pass.h
src/support/: CMakeLists.txt
src/support/ccerror/: ccerror.cpp  ccerror.h  error.h
src/support/diag/: diag.cpp  diag.h
src/support/memory/: arena.cpp  arena.h
ssa/: CMakeLists.txt
test/: func.h  test_expr.c  test_func.cpp  test_stmt.c  test_struct.c
tests/: CMakeLists.txt  test_add.c  test_if.c  test_simple.c  test_test.cpp  test_three.c  test_two.c  test_var.c
tools/: CMakeLists.txt
tools/grammer/: CMakeLists.txt  README.md  grammer.txt  main.cpp  transgram.cpp  transgram.h
tools/tgrammar/: README.md  grammar.txt  main.cpp  outgrammer.txt  transgram.cpp  transgram.h  trie.h  trie.hpp
x86/: CMakeLists.txt  codegen.cpp  codegen.h
